completely rewritten formula functions and tests